<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/categories"
            android:icon="@drawable/ic_category"
            android:title="@string/category" />
        <item
            android:id="@+id/rate_app"
            android:icon="@drawable/ic_rate"
            android:title="@string/rate_app" />
        <item
            android:id="@+id/more_app"
            android:icon="@drawable/ic_more"
            android:title="@string/more_app" />
        <item
            android:id="@+id/share_app"
            android:icon="@drawable/ic_shareside"
            android:title="@string/share_app" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_about"
            android:title="@string/about_us" />
        <item
            android:id="@+id/privacy_policy"
            android:icon="@drawable/ic_privacy"
            android:title="@string/privacy_policy" />
        <item
            android:id="@+id/extra"
            android:enabled="false"
            android:title="" />
    </group>
</menu>
